--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Your Name — Mechatronics Engineer</title>
+  <title>Elijah Weddle — Mechatronics Engineer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Link to CSS: you can either embed or link externally -->
   <style>
