real_name_update

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </nav>
 
   <header id="hero">
-    <h1>Your Name</h1>
+    <h1>Elijah Weddle</h1>
     <p>Mechatronics Engineer. Robotics, embedded systems, automation. Creating solutions that move the world.</p>
   </header>
 
