--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
   </header>
 
   <section id="about" class="about">
-    <h2>About Me</h2>
-    <p>Write a brief intro: your education, experience, what drives you.</p>
+    <h2>Summary</h2>
+    <p>Controls Systems Engineer with experience in automation, robotics, and manufacturing systems. Skilled in designing, integrating, and validating electro-mechanical and control systems including HVAC, robotic automation cells, and aerospace manufacturing equipment. Strong foundation in model-based design (Matlab/Simulink), embedded systems, and electro-hydraulic control integration. Pursuing M.S. in Mechanical Engineering (Mechatronics & Controls). Proven leader with military background and project management expertise.</p>
   </section>
 
   <section id="projects" class="projects">
