rover picture test

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <h3>Project One</h3>
         <p>Short description of a mechatronics project: what problem, technologies used, results.</p>
         <a href="link-to-project">See more →</a>
+        <img src="assets/rover.pdf" alt="Me working on a robot" width="400">
       </div>
       <!-- more cards -->
     </div>
