adding profile picture

--- a/index.html
+++ b/index.html
@@ -43,8 +43,17 @@
   </header>
 
   <section id="about" class="about">
+      <div style="display: flex; align-items: center; gap: 20px; flex-wrap: wrap;">
+    <!-- Profile Image -->
+    <img src="assets/profile_pic.pdf" alt="Your Name" 
+         style="width: 200px; height: auto; border-radius: 50%; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+        </div>
     <h2>Summary</h2>
-    <p>Controls Systems Engineer with experience in automation, robotics, and manufacturing systems. Skilled in designing, integrating, and validating electro-mechanical and control systems including HVAC, robotic automation cells, and aerospace manufacturing equipment. Strong foundation in model-based design (Matlab/Simulink), embedded systems, and electro-hydraulic control integration. Pursuing M.S. in Mechanical Engineering (Mechatronics & Controls). Proven leader with military background and project management expertise.</p>
+    <p>Controls Systems Engineer with experience in automation, robotics, and manufacturing systems. Skilled in designing, 
+      integrating, and validating electro-mechanical and control systems including HVAC, robotic automation cells, and 
+      aerospace manufacturing equipment. Strong foundation in model-based design (Matlab/Simulink), embedded systems, 
+      and electro-hydraulic control integration. Pursuing M.S. in Mechanical Engineering (Mechatronics & Controls). Proven 
+      leader with military background and project management expertise.</p>
   </section>
 
   <section id="projects" class="projects">
