--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <section id="about" class="about">
       <div style="display: flex; align-items: center; gap: 20px; flex-wrap: wrap;">
     <!-- Profile Image -->
-    <img src="assets/profile_pic.pdf" alt="Your Name" 
+    <img src="assets/profile_pic.jpg" alt="Your Name" 
          style="width: 200px; height: auto; border-radius: 50%; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
         </div>
     <h2>Summary</h2>
@@ -64,7 +64,7 @@
         <h3>Project One</h3>
         <p>Short description of a mechatronics project: what problem, technologies used, results.</p>
         <a href="link-to-project">See more →</a>
-        <img src="assets/rover.pdf" alt="Me working on a robot" width="400">
+        <img src="assets/rover.jpg" alt="Me working on a robot" width="400">
       </div>
       <!-- more cards -->
     </div>
