fixing profile pic
adding line under Summary, changing structure of section

--- a/index.html
+++ b/index.html
@@ -42,19 +42,30 @@
     <p>Mechatronics Engineer. Robotics, embedded systems, automation. Creating solutions that move the world.</p>
   </header>
 
-  <section id="about" class="about">
-      <div style="display: flex; align-items: center; gap: 20px; flex-wrap: wrap;">
+ <section id="about" class="about" style="padding: 60px 20px; max-width: 1000px; margin: 0 auto;">
+  <!-- Section Title with Divider -->
+  <h2 style="margin-bottom: 10px; font-size: 2rem; font-weight: 600; position: relative; display: inline-block;">
+    Summary
+  </h2>
+  <div style="height: 3px; width: 60px; background: #007bff; margin: 10px 0 30px 0; border-radius: 2px;"></div>
     <!-- Profile Image -->
-    <img src="assets/profile_pic.jpg" alt="Your Name" 
-         style="width: 200px; height: auto; border-radius: 50%; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
-        </div>
-    <h2>Summary</h2>
-    <p>Controls Systems Engineer with experience in automation, robotics, and manufacturing systems. Skilled in designing, 
-      integrating, and validating electro-mechanical and control systems including HVAC, robotic automation cells, and 
-      aerospace manufacturing equipment. Strong foundation in model-based design (Matlab/Simulink), embedded systems, 
-      and electro-hydraulic control integration. Pursuing M.S. in Mechanical Engineering (Mechatronics & Controls). Proven 
-      leader with military background and project management expertise.</p>
-  </section>
+    <img src="assets/profile_pic.pdf" alt="Your Name"
+         style="width: 200px; height: 200px; object-fit: cover; border-radius: 50%; 
+                box-shadow: 0 4px 10px rgba(0,0,0,0.2); flex-shrink: 0;">
+
+    <!-- Summary Text -->
+    <p style="flex: 1; min-width: 250px; font-size: 1.1rem; line-height: 1.6;">
+      Controls Systems Engineer with experience in automation, robotics, and manufacturing systems. 
+      Skilled in designing, integrating, and validating electro-mechanical and control systems 
+      including HVAC, robotic automation cells, and aerospace manufacturing equipment. 
+      Strong foundation in model-based design (Matlab/Simulink), embedded systems, 
+      and electro-hydraulic control integration. Pursuing M.S. in Mechanical Engineering 
+      (Mechatronics & Controls). Proven leader with military background and project 
+      management expertise.
+    </p>
+  </div>
+</section>
+
 
   <section id="projects" class="projects">
     <h2>Projects</h2>
