--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </h2>
   <div style="height: 3px; width: 60px; background: #007bff; margin: 10px 0 30px 0; border-radius: 2px;"></div>
     <!-- Profile Image -->
-    <img src="assets/profile.jpeg" alt="Your Name"
+    <img src="assets/profile_pic.jpg" alt="Your Name"
          style="width: 200px; height: 200px; object-fit: cover; border-radius: 50%; 
                 box-shadow: 0 4px 10px rgba(0,0,0,0.2); flex-shrink: 0;">
 
