correcting rover image

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h3>Project One</h3>
         <p>Short description of a mechatronics project: what problem, technologies used, results.</p>
         <a href="link-to-project">See more →</a>
-        <img src="assets/rover.jpeg" alt="Me working on a robot" width="400">
+        <img src="assets/rover.jpg" alt="Me working on a robot" width="400">
       </div>
       <!-- more cards -->
     </div>
