--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <header id="hero">
     <h1>Elijah Weddle</h1>
-    <p>Mechatronics Engineer. Robotics, embedded systems, automation. Creating solutions that move the world.</p>
+    <p>Mechatronics Engineer. Robotics, automation, and manufacturing. Devloping solutions that create the world.</p>
   </header>
 
  <section id="about" class="about" style="padding: 60px 20px; max-width: 1000px; margin: 0 auto;">
@@ -49,19 +49,18 @@
   </h2>
   <div style="height: 3px; width: 60px; background: #007bff; margin: 10px 0 30px 0; border-radius: 2px;"></div>
     <!-- Profile Image -->
-    <img src="assets/profile_pic.jpg" alt="Your Name"
+    <img src="assets/profile_pic.jpeg" alt="Your Name"
          style="width: 200px; height: 200px; object-fit: cover; border-radius: 50%; 
                 box-shadow: 0 4px 10px rgba(0,0,0,0.2); flex-shrink: 0;">
 
     <!-- Summary Text -->
     <p style="flex: 1; min-width: 250px; font-size: 1.1rem; line-height: 1.6;">
-      Controls Systems Engineer with experience in automation, robotics, and manufacturing systems. 
-      Skilled in designing, integrating, and validating electro-mechanical and control systems 
-      including HVAC, robotic automation cells, and aerospace manufacturing equipment. 
-      Strong foundation in model-based design (Matlab/Simulink), embedded systems, 
-      and electro-hydraulic control integration. Pursuing M.S. in Mechanical Engineering 
-      (Mechatronics & Controls). Proven leader with military background and project 
-      management expertise.
+     Innovative Mechatronics Engineer with over 5 years of experience bridging mechanical engineering and software to develop and optimize 
+     robotic and autonomous systems. Proficient in designing and implementing precision motion control systems, integrating electromechanical 
+     components, and ensuring system reliability in high-throughput environments. Skilled in utilizing CAD software (SOLIDWORKS), programming 
+     PLCs, and deploying industrial automation solutions. Adept at troubleshooting complex electromechanical systems to maximize uptime and 
+     throughput. Committed to fostering a collaborative and detail-oriented team culture to accelerate the deployment of cutting-edge technology
+      in materials science research.
     </p>
   </div>
 </section>
@@ -75,7 +74,7 @@
         <h3>Project One</h3>
         <p>Short description of a mechatronics project: what problem, technologies used, results.</p>
         <a href="link-to-project">See more →</a>
-        <img src="assets/rover.jpg" alt="Me working on a robot" width="400">
+        <img src="assets/rover.jpeg" alt="Me working on a robot" width="400">
       </div>
       <!-- more cards -->
     </div>
@@ -101,13 +100,13 @@
 
   <section id="contact" class="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+    <p>Email: <a href="mailto:youremail@example.com">elijah.r.weddle@gmail.com</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">yourprofile</a></p>
     <!-- any other links -->
   </section>
 
   <footer>
-    &copy; <!-- year --> <span id="year"></span> — Your Name. All rights reserved.
+    &copy; <!-- year --> <span id="year"></span> — Elijah Weddle. All rights reserved.
   </footer>
 
   <script>
