--- a/index.html
+++ b/index.html
@@ -44,23 +44,15 @@
 
  <section id="about" class="about" style="padding: 60px 20px; max-width: 1000px; margin: 0 auto;">
   <!-- Section Title with Divider -->
-  <h2 style="margin-bottom: 10px; font-size: 2rem; font-weight: 600; position: relative; display: inline-block;">
-    Summary
-  </h2>
+  <h2 style="margin-bottom: 10px; font-size: 2rem; font-weight: 600; display: inline-block;">Summary</h2>
   <div style="height: 3px; width: 60px; background: #007bff; margin: 10px 0 30px 0; border-radius: 2px;"></div>
-    <!-- Profile Image -->
-    <img src="assets/profile_pic.jpeg" alt="Your Name"
-         style="width: 200px; height: 200px; object-fit: cover; border-radius: 50%; 
-                box-shadow: 0 4px 10px rgba(0,0,0,0.2); flex-shrink: 0;">
 
-    <!-- Summary Text -->
+  <!-- Flex container for image + text -->
+  <div style="display: flex; align-items: center; gap: 30px; flex-wrap: wrap;">
+    <img src="assets/profile_pic.jpeg" alt="Your Name"
+         style="width: 200px; height: 200px; object-fit: cover; border-radius: 50%; box-shadow: 0 4px 10px rgba(0,0,0,0.2); flex-shrink: 0;">
     <p style="flex: 1; min-width: 250px; font-size: 1.1rem; line-height: 1.6;">
-     Innovative Mechatronics Engineer with over 5 years of experience bridging mechanical engineering and software to develop and optimize 
-     robotic and autonomous systems. Proficient in designing and implementing precision motion control systems, integrating electromechanical 
-     components, and ensuring system reliability in high-throughput environments. Skilled in utilizing CAD software (SOLIDWORKS), programming 
-     PLCs, and deploying industrial automation solutions. Adept at troubleshooting complex electromechanical systems to maximize uptime and 
-     throughput. Committed to fostering a collaborative and detail-oriented team culture to accelerate the deployment of cutting-edge technology
-      in materials science research.
+      Innovative Mechatronics Engineer with over 5 years of experience bridging mechanical engineering and software ...
     </p>
   </div>
 </section>
