initial color-by-number launch

--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
       </div>
       <!-- more cards -->
     </div>
+
+    <div class="project-list">
+  <div class="project-card">
+    <h3>Project One</h3>
+    <p>Short description of a mechatronics project...</p>
+    <a href="link-to-project">See more →</a>
+    <img src="assets/rover.jpeg" alt="Me working on a robot" width="400">
+  </div>
+</div>
+
   </section>
 
   <section id="skills" class="skills">
