root index file work

--- a/index.html
+++ b/index.html
@@ -71,13 +71,11 @@
       <!-- more cards -->
     </div>
 
-    <div class="project-list">
-  <div class="project-card">
-    <h3>Project One</h3>
-    <p>Short description of a mechatronics project...</p>
-    <a href="link-to-project">See more →</a>
-    <img src="assets/rover.jpeg" alt="Me working on a robot" width="400">
-  </div>
+   <div class="project-card">
+  <h3>3D Color-by-Number Tool</h3>
+  <p>Upload an image to generate a voxelized 3D color-by-number model — export as STL for 3D printing.</p>
+  <a href="color-by-number/">Try it →</a>
+  <img src="color-by-number/assets/preview.png" alt="Preview of 3D Color-by-Number" width="400">
 </div>
 
   </section>
