--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           Ardupilot, interfacing a Raspberry Pi with an Arduino, and GPS/remote communication.
         </p>
         <a href="#">See more →</a>
-        <img src="assets/rover.jpeg" alt="Me working on a robot">
+        <img src="assets/rover.jpg" alt="Me working on a robot">
       </div>
 
       <div class="project-card">
