--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
       newsContainer.appendChild(div);
     });
   </script>
+<img src="assets/rover.jpeg" alt="Rover project">
+<img src="assets/rover.jpg" alt="Rover project">
+<img src="color-by-number/assets/preview.png" alt="Preview of 3D Color-by-Number">
 
 </body>
 </html>
