--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="project-card">
         <h3>Mars Rover</h3>
         <p>
-          A project for an undergraduate course, Sensors and Actuators. Learned the basic principles of sensors and actuators, 
+          A project for a mechatronics enigneering undergraduate course, Sensors and Actuators. Learned the basic principles of sensors and actuators, 
           Ardupilot, interfacing a Raspberry Pi with an Arduino, and GPS/remote communication.
         </p>
         <a href="#">See more →</a>
@@ -61,9 +61,10 @@
       </div>
 
       <div class="project-card">
-        <h3>3D Color-by-Number Tool</h3>
+        <h3>Color-by-Number Image Converter</h3>
         <p>
-          Upload an image to generate a voxelized 3D color-by-number model — export as STL for 3D printing.
+          Upload an image to generate a voxelized 3D color-by-number model — export as STL for 3D printing. Started out as an SIUE Hackathon project, 
+          then expanded it into a full web app using Three.js and Node.js.
         </p>
         <a href="color-by-number/">Try it →</a>
         <img src="color-by-number/assets/preview.png" alt="Preview of 3D Color-by-Number">
@@ -99,7 +100,7 @@
   <section id="contact" class="contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:elijah.r.weddle@gmail.com">elijah.r.weddle@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">https://www.linkedin.com/in/elijah-weddle</a></p>
   </section>
 
   <!-- ==========================
@@ -137,9 +138,7 @@
       newsContainer.appendChild(div);
     });
   </script>
-<img src="assets/rover.jpeg" alt="Rover project">
-<img src="assets/rover.jpg" alt="Rover project">
-<img src="color-by-number/assets/preview.png" alt="Preview of 3D Color-by-Number">
+
 
 </body>
 </html>
