corrected linked in link

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <section id="contact" class="contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:elijah.r.weddle@gmail.com">elijah.r.weddle@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">https://www.linkedin.com/in/elijah-weddle</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/elijah-weddle" target="_blank">https://www.linkedin.com/in/elijah-weddle</a></p>
   </section>
 
   <!-- ==========================
